iptables.rules
*nat
:PREROUTING ACCEPT [6:1038]
:INPUT ACCEPT [6:1038]
:OUTPUT ACCEPT [1809:138472]
:POSTROUTING ACCEPT [1879:142672]
:3PROXY - [0:0]
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -j 3PROXY
-A 3PROXY -d 0.0.0.0/8 -j RETURN
-A 3PROXY -d 10.0.0.0/8 -j RETURN
-A 3PROXY -d 127.0.0.0/8 -j RETURN
-A 3PROXY -d 169.254.0.0/16 -j RETURN
-A 3PROXY -d 172.16.0.0/12 -j RETURN
-A 3PROXY -d 192.168.0.0/16 -j RETURN
-A 3PROXY -d 224.0.0.0/4 -j RETURN
-A 3PROXY -d 240.0.0.0/4 -j RETURN
-A 3PROXY -p tcp -j REDIRECT --to-ports 8888
COMMIT
*mangle
:PREROUTING ACCEPT [14010:10522218]
:INPUT ACCEPT [14010:10522218]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [13526:7354223]
:POSTROUTING ACCEPT [13528:7354287]
COMMIT
*filter
:INPUT ACCEPT [14010:10522218]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [13526:7354223]
COMMIT
